--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="file:///C:/Users/nolbe/Desktop/web%20dayana/paginaweb.html" >Inicio</a></li>
-                <li><a href="file:///C:/Users/nolbe/Desktop/web%20dayana/nosotros1.html" >Nosotros</a></li>
-                <li><a href="file:///C:/Users/nolbe/Desktop/web%20dayana/productos.html" >Productos</a></li>
-                <li><a href="file:///C:/Users/nolbe/Desktop/web%20dayana/servicios.html" >Servicios</a></li>
-                <li><a href="file:///C:/Users/nolbe/Desktop/web%20dayana/contacto.html">Contacto</a></li>
+                <li><a href="https://dayan-designer.github.io/inicio/" >Inicio</a></li>
+                <li><a href="https://dayan-designer.github.io/nosotros/" >Nosotros</a></li>
+                <li><a href="https://dayan-designer.github.io/productos/" >Productos</a></li>
+                <li><a href="https://dayan-designer.github.io/servicios/">Servicios</a></li>
+                <li><a href="https://dayan-designer.github.io/contacto/">Contacto</a></li>
             </ul>
         </nav>
     </header>
