--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             <h1>COMPIPRO S.A.C</h1>
             <p>Somos una empresa peruana que se dedica a la oferta de artículos y productos publicitarios   </p>
             <p> de alta calidad y diseño para eventos, ferias, regalos corporativos y para la industria en general.</p>
-            <a href="https://w.app/qeDkvy" class="cta">Whatsapp</a>
           
         </div>
     </section>
@@ -37,7 +36,7 @@
         <p>Contacta con nosotros utilizando el formulario a continuación, o síguenos en nuestras redes sociales.</p>
         <div class="contact-container">
             <div class="contact-form">
-                <form id="contactForm">
+                <form id="contactForm" action="https://formspree.io/f/xvgorbaq" method="POST">
                     <div class="form-group">
                         <label for="name">Nombre:</label>
                         <input type="text" id="name" name="name" required>
@@ -50,7 +49,7 @@
                         <label for="message">Mensaje:</label>
                         <textarea id="message" name="message" rows="5" required></textarea>
                     </div>
-                    <button type="submit">Enviar</button>
+                    <button type="submit" >Enviar</button>
                 </form>
             </div>
             
